Well, I tried to objectify a pane, but it's not working and I'm lazy.

--- a/spim/Makefile
+++ b/spim/Makefile
@@ -113,8 +113,7 @@ CSH = bash
 
 LEXCFLAGS += -O $(CXXFLAGS)
 
-OBJS = spimcurses.o spim-utils.o run.o mem.o inst.o data.o sym-tbl.o parser_yacc.o lex.yy.o \
-       syscall.o display-utils.o string-stream.o
+OBJS = spimcurses.o simpane.o spim-utils.o run.o mem.o inst.o data.o sym-tbl.o parser_yacc.o lex.yy.o syscall.o display-utils.o string-stream.o
 
 spim: $(OBJS)
 	$(CXX) -g $(OBJS) $(LDFLAGS) -o $@
@@ -172,6 +171,7 @@ inst.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(C
 
 mem.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h
 
+
 run.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h $(CPU_DIR)/sym-tbl.h parser_yacc.h $(CPU_DIR)/syscall.h $(CPU_DIR)/run.h
 
 spim-utils.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/data.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h $(CPU_DIR)/scanner.h $(CPU_DIR)/parser.h parser_yacc.h $(CPU_DIR)/run.h $(CPU_DIR)/sym-tbl.h
@@ -183,6 +183,9 @@ syscall.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/inst.h $(CPU_
 
 lex.yy.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/sym-tbl.h $(CPU_DIR)/parser.h $(CPU_DIR)/scanner.h parser_yacc.h $(CPU_DIR)/op.h
 
-spimcurses.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h $(CPU_DIR)/parser.h $(CPU_DIR)/sym-tbl.h $(CPU_DIR)/scanner.h parser_yacc.h
+simpane.o: curses/simpane.cpp curses/simpane.h
+	$(CXX) $(CXXFLAGS) $(YCFLAGS) -c $<
+
+spimcurses.o: $(CPU_DIR)/spim.h curses/simpane.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h $(CPU_DIR)/parser.h $(CPU_DIR)/sym-tbl.h $(CPU_DIR)/scanner.h parser_yacc.h
 
 parser_yacc.o: $(CPU_DIR)/spim.h $(CPU_DIR)/string-stream.h $(CPU_DIR)/spim-utils.h $(CPU_DIR)/inst.h $(CPU_DIR)/reg.h $(CPU_DIR)/mem.h $(CPU_DIR)/sym-tbl.h $(CPU_DIR)/data.h $(CPU_DIR)/scanner.h $(CPU_DIR)/parser.h
